--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py34, py35, flake8
+envlist = py34, py35, py36, flake8
 
 [travis]
 python =
+    3.6: py36
     3.5: py35
     3.4: py34
 
