--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,13 @@ script: tox
 
 # After you create the Github repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
-deploy:
-  provider: pypi
-  distributions: sdist bdist_wheel
-  user: dhruvbaldawa
-  password:
-    secure: PLEASE_REPLACE_ME
-  on:
-    tags: true
-    repo: dhruvbaldawa/multibase
-    python: 2.7
+#deploy:
+#  provider: pypi
+#  distributions: sdist bdist_wheel
+#  user: dhruvbaldawa
+#  password:
+#    secure: PLEASE_REPLACE_ME
+#  on:
+#    tags: true
+#    repo: dhruvbaldawa/multibase
+#    python: 2.7
