add codecov support

--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,15 @@ deps=flake8
 commands=flake8 multibase
 
 [testenv]
+passenv = CI TRAVIS TRAVIS_*
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir}
+    py.test --cov=multibase/ --cov-branch --cov-report=term-missing --cov-report=xml --basetemp={envtmpdir}
+    codecov
 
 
 ; If you want to make tox run the tests with the same versions, create a
