--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script: tox
 #    secure: PLEASE_REPLACE_ME
 #  on:
 #    tags: true
-#    repo: dhruvbaldawa/multibase
+#    repo: multiformats/py-multibase
 #    python: 2.7
