--- a/tox.ini
+++ b/tox.ini
@@ -1,31 +1,23 @@
 [tox]
-envlist = py35, py36, py37, py38, flake8
-
-[travis]
-python =
-    3.8: py38
-    3.7: py37
-    3.6: py36
-    3.5: py35
-
-[testenv:flake8]
-basepython=python
-deps=flake8
-commands=flake8 multibase
+envlist=
+    py{310,311,312,313,314}-core
+    py{310,311,312,313,314}-lint
+    docs
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
-setenv =
-    PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements_dev.txt
+extras=
+    dev
+commands=
+    core: pytest {posargs:tests}
+
+[testenv:py{310,311,312,313,314}-lint]
+deps=pre-commit
+commands=
+    ; pre-commit install
+    pre-commit run --all-files --show-diff-on-failure
+
+[testenv:docs]
 commands =
-    pip install -U pip
-    py.test --cov=multibase/ --cov-branch --cov-report=term-missing --cov-report=xml --basetemp={envtmpdir}
-    codecov
-
-
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+    make docs-ci
+allowlist_externals=
+    make
