--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -28,12 +28,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Set TOXENV
         run: |
-          python_version="${{ matrix.python-version }}"
-          toxenv="${{ matrix.toxenv }}"
-          if [[ "$toxenv" == "docs" ]]; then
-            echo "TOXENV=docs" | tee -a "$GITHUB_ENV"
+          if [[ "${{ matrix.toxenv }}" == "docs" ]]; then
+            echo "TOXENV=docs" >> "$GITHUB_ENV"
           else
-            echo "TOXENV=py${python_version}-${toxenv}" | tr -d '.' | tee -a "$GITHUB_ENV"
+            python_version="${{ matrix.python-version }}"
+            echo "TOXENV=py${python_version//./}-${{ matrix.toxenv }}" >> "$GITHUB_ENV"
           fi
       - run: |
           python -m pip install --upgrade pip
@@ -58,8 +57,7 @@ jobs:
         shell: bash
         run: |
           python_version="${{ matrix.python-version }}"
-          toxenv="${{ matrix.toxenv }}"
-          echo "TOXENV=py${python_version}-${toxenv}" | tr -d '.' | tee -a "$GITHUB_ENV"
+          echo "TOXENV=py${python_version//./}-${{ matrix.toxenv }}" >> "$GITHUB_ENV"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
