Fix Read the Docs build failures
- Update deprecated Sphinx settings in docs/conf.py:
  - Replace source_suffix = '.rst' with dict format
  - Replace master_doc with root_doc
- Add build commands to .readthedocs.yaml to generate API docs
  - Generate modules.rst and multibase.rst before build
- Fixes missing 'modules' document warning that caused build to fail

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,9 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.10"
+  commands:
+    - rm -f docs/multibase.rst docs/modules.rst
+    - sphinx-apidoc -o docs/ multibase
 
 sphinx:
   configuration: docs/conf.py
