--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,8 +5,9 @@ build:
   tools:
     python: "3.10"
   commands:
+    - python -m pip install sphinx
     - rm -f docs/multibase.rst docs/modules.rst
-    - sphinx-apidoc -o docs/ multibase
+    - python -m sphinx.ext.apidoc -o docs/ multibase
 
 sphinx:
   configuration: docs/conf.py
