--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,10 +4,10 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.10"
-  commands:
-    - python -m pip install sphinx
-    - rm -f docs/multibase.rst docs/modules.rst
-    - python -m sphinx.ext.apidoc -o docs/ multibase
+  jobs:
+    pre_build:
+      - rm -f docs/multibase.rst docs/modules.rst
+      - python -m sphinx.ext.apidoc -o docs/ multibase
 
 sphinx:
   configuration: docs/conf.py
